<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.VideoDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/video_thumbnail_image_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/video_image_height"
            android:src="@drawable/thumb"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/video_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/title_margin"
            android:text="@string/video_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/video_channel_text_view"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/title_margin"
                android:text="@string/video_channel"/>

            <Button
                android:id="@+id/subscribe_button_view"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/subscribe"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/video_likes_text_view"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/title_margin"
                android:text="@string/video_views"/>

            <Button
                android:id="@+id/video_like_text_view"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/title_margin"
                android:text="@string/video_like"/>

        </LinearLayout>

        <include layout="@layout/comments_layout"/>

    </LinearLayout>

</FrameLayout>