<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/comment_title"
        android:text="@string/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_margin="@dimen/title_margin"
        android:textStyle="bold"/>

    <android.support.v7.widget.RecyclerView
        android:layout_below="@id/comment_title"
        android:id="@+id/comments_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/comments_layout"
        android:layout_below="@id/comments_recycler_view"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="4"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/comment_edit_text"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:hint="@string/comment_here"/>

        <Button
            android:id="@+id/comment_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_gravity="end"/>

    </LinearLayout>


</RelativeLayout>